header z-index fixed

--- a/src/_assets/stylesheets/styles.scss
+++ b/src/_assets/stylesheets/styles.scss
@@ -39,7 +39,7 @@ header {
    width: 100%;
    color: $darkgray;
    border-bottom: 1px solid $gray;
-
+   z-index: 777;
 
    .logo {
       text-indent: -999px;
